Walk/manifests/walk-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: walk
  namespace: tutorial
  labels:
    app: walk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: walk
  template:
    metadata:
      labels:
        app: walk
    spec:
      containers:
        - name: walk
          image: hispres.azurecr.io/walk:v1
          ports:
            - containerPort: 8080
