Walk/manifests/walk-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Walk
  labels:
    app: Walk
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: Walk
